# adventofcode2017

./: README.md  adventofcode2017.cabal
1/: captcha.hs
2/: checksum.hs  test.txt
3/: spiral.hs
src/: day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs
